# PrtSc

./: .gitignore  Annotation.cpp  Annotation.h  AppMessages.h  ArrowAnnotation.cpp  ArrowAnnotation.h  CMakeLists.txt  CaptureToolbar.cpp  CaptureToolbar.h  HotkeyManager.cpp  HotkeyManager.h  LICENSE  OcrEngine.cpp  OcrEngine.h  PrtSc.rc  PrtScOcr.cpp  PrtScStartupMsix.cpp  README.md  ScreenOverlay.cpp  ScreenOverlay.h  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  StartupManager.cpp  StartupManager.h  SysTrayIcon.cpp  SysTrayIcon.h  THIRD_PARTY_NOTICES.md  TextAnnotation.cpp  TextAnnotation.h  main.cpp  resource.h
installer/: License.rtf  PrtSc.wxs  README.md  build-msi.ps1
